camunda8/zeebe-broker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeebe-broker
  labels:
    app: zeebe-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeebe-broker
  template:
    metadata:
      labels:
        app: zeebe-broker
    spec:
      containers:
        - name: zeebe-broker
          image: docker.io/camunda/zeebe:8.4.19
          ports:
            - name: command
              containerPort: 26501
            - name: internal
              containerPort: 26502
          volumeMounts:
            - name: zeebe-data
              mountPath: /usr/local/zeebe/data
      volumes:
        - name: zeebe-data
          emptyDir: {}
